Fix for quickie button styling on iOS

--- a/scss/quickie.scss
+++ b/scss/quickie.scss
@@ -128,6 +128,7 @@ td-card {
       button {
         width: 40px;
         height: 40px;
+        padding: 0;
         @include border-radius(50%);
         border: none;
         background-color: $light;
